tests/fail/mixed-contravariance-misuse.stderr
error: lifetime may not live long enough
  --> tests/fail/mixed-contravariance-misuse.rs:16:5
   |
13 | fn shorten<'b, 'short, 'long: 'short>(
   |                ------  ----- lifetime `'long` defined here
   |                |
   |                lifetime `'short` defined here
...
16 |     long_long
   |     ^^^^^^^^^ coercion requires that `'short` must outlive `'long`
   |
   = help: consider adding the following bound: `'short: 'long`
